--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,19 @@ dependencies:
     sdk: flutter
   http: ^1.2.0
   google_fonts: ^6.2.1
+  image_picker: ^1.1.1
+  file_picker: ^8.0.0
+  record: ^6.1.1
+  audioplayers: ^6.0.0
+  video_player: ^2.8.0
+  shared_preferences: ^2.2.0
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  # pusher_channels_flutter: ^2.5.0
+  pusher_reverb_flutter: ^0.0.3
 
 dev_dependencies:
   flutter_test:
